--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,7 @@ http {
     keepalive_timeout  65;
 
     gzip  on;
+    gzip_static on;
 
     server {
       listen       80;
@@ -34,7 +35,7 @@ http {
 
       location / {
         root   /www;
-        index  index.html index.htm;
+        index  index.html index.html.gz;
       }
    }
 }
